@@ -62,6 +62,7 @@ column_names = [
     _('Longitude'),
     _('Latitude'),
     _('Last Changed'),
+    _('Street'),
     ]
 
 #-------------------------------------------------------------------------
